# Physical-AI-Textbook-with-RAG-Chatbot

./: .dockerignore  .env.example  .gitignore
.github/workflows/: docusaurus-build.yml  test-code-examples.yml
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  validate_rag.py
backend/agent_api/: agent.py  confidence.py  config.py  main.py  models.py  sessions.py  tools.py
backend/agent_api/db/: __init__.py  init_db.py
backend/agent_api/prompts/: system.txt
backend/agent_api/routers/: chat.py  sessions.py
backend/agent_api/utils/: circuit_breaker.py  logger.py  retry.py
backend/examples/: example_conversation.py  example_error_handling.py  example_stream.py  example_sync.py
docker/gazebo-fortress/: Dockerfile  README.md  docker-compose.yml  run_gazebo.sh
docker/huggingface/: start.sh
docker/ros2-testing/: Dockerfile
docs/: docusaurus.config.js  package.json
docs/docs/: intro.md
docs/static/code-examples/module-4/vla_system/: __init__.py  config.py  msg_types.py  package.xml  setup.py  utils.py
scripts/: check-links-module2.js  test-code-examples.sh
specs/001-rag-ingestion-pipeline/: RUNBOOK.md  VALIDATION_REPORT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ros2-module/: BUILD_SUCCESS_REPORT.md  CONSISTENCY_REPORT.md  CONSTITUTION_VALIDATION.md  IMPLEMENTATION_STATUS.md  PAGE_COUNT_ESTIMATE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-digital-twin/: VALIDATION.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rag-retrieval-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-isaac-ai-brain/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-rag-agent-api/: VALIDATION_REPORT.md  configuration.md  data-model.md  deployment.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-rag-chatbot-frontend/: data-model.md  plan.md  quickstart.md  spec.md  (+2 more)
(+175 files in other folders)
